--- a/index.html
+++ b/index.html
@@ -66,14 +66,14 @@
           </div>
         <h2 id=contact>Contact</h2>
         <div class="contact-form">
-            <form id="contact-form" method="post" action="contact">
+            <form id="contact-form" method="post" action="Contact-form.php">
                 <input name="name" type="text" class="form-control" placeholder="Your Name" required>
                 <br>
                 <input name="email" type="email" class="form-control" placeholder="Your Email" required>
                 <br>
                 <textarea name="message" class="form-control" placeholder="Message" row="4" required></textarea>
                 <br>
-                <input type="submit" class="form-control submit" value="SEND MESSAGE">
+                <input type="submit" class="form-control submit" value="Send Message">
             </form>
         </div>
     </div>
