--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="about-me">
             <h2>Over mijzelf</h2>
             <br>
-            <p style="height: 800px;">  Ik ben Robin ik ben negentien jaar avontuurlijk gesteld en leer graag nieuwe dingen, heb tot nu toe ervaring in HTML, CSS en PHP. Doe momenteel een HBO opleiding ICT.  
+            <p style="height: 800px;">  Ik ben Robin ik ben negentien jaar, avontuurlijk ingesteld en leer graag nieuwe dingen. Ik heb tot nu toe ervaring in HTML, CSS en PHP. Ik doe momenteel een HBO opleiding ICT.  
             Op deze website kunt u projecten inzien die ik heb gemaakt en ook contact met mij opnemen bij eventuele vragen of werkmogelijkheden.
             </p>
         </div>
@@ -48,7 +48,7 @@
                 <h3>Portfolio website</h3>
                 <br>
                 <p style=height:700px;> Mijn Laatst afgemaakte project is een portofolio website. 
-                Hierbij is gewerkt met SCRUM en is de website gemaakt door middel van HTML, CSS, PHP. </p>
+                Hierbij is gewerkt met SCRUM en de website is gemaakt door middel van HTML, CSS, PHP. </p>
             </div>
             <div class="project2">
                 <h3>Huidig/toekomstig project</h3>
