--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
                 <br>                  
                 <h3>Portfolio website</h3>
                 <br>
-                <p style=height:700px;> Mijn Laatst afgemaakte project is een portofolio website. 
-                Hierbij is gewerkt met SCRUM en de website is gemaakt door middel van HTML, CSS, PHP. </p>
+                <p style=height:700px;> Mijn laatst afgemaakte project is een portofolio website. 
+                Hierbij is gewerkt met SCRUM in de website is gemaakt door middel van HTML, CSS, PHP. </p>
             </div>
             <div class="project2">
                 <h3>Huidig/toekomstig project</h3>
